<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gestures</string>
    <string name="settings_screen_correction">Text</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_screen_clipboard">Clipboard</string>
    <string name="settings_screen_emoji">Emoji</string>
    <string name="settings_screen_about">About</string>
    <string name="about_copyright">© 2026, Jishnu Mohan</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_website">Website</string>
    <string name="about_source">Source code</string>
    <string name="about_section_credits">Credits</string>
    <string name="about_logo_credit">Logo by Hiran Venugopalan</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_section_legal">Legal</string>
    <string name="about_open_source_licenses">Open-source licenses</string>
    <string name="about_app_license">License</string>
    <string name="about_app_license_summary">Apache License 2.0</string>
    <string name="about_website_url" translatable="false">https://indic.app</string>
    <string name="about_source_url" translatable="false">https://github.com/smc/indic-keyboard</string>
    <string name="about_contributors_url" translatable="false">https://github.com/smc/Indic-Keyboard/graphs/contributors?all=1</string>
    <string name="about_copyright_url" translatable="false">https://j15h.nu/</string>
    <string name="about_logo_credit_url" translatable="false">https://hiran.in/</string>
    <string name="suggestion_strip_toolbox_menu">Toolbox</string>
    <string name="clipboard_enable">Clipboard history</string>
    <string name="clipboard_enable_summary">Save copied text and images, open with a long press on the comma key</string>
    <string name="clipboard_recent_chip">Show recently copied</string>
    <string name="clipboard_recent_chip_summary">Suggest the last copied item in the suggestion strip for a short while</string>
    <string name="clipboard_expiry">Remove items after</string>
    <string name="clipboard_expiry_5min">5 minutes</string>
    <string name="clipboard_expiry_30min">30 minutes</string>
    <string name="clipboard_expiry_1hour">1 hour</string>
    <string name="clipboard_expiry_1day">1 day</string>
    <string name="clipboard_expiry_never">Never</string>
    <string-array name="clipboard_expiry_entries">
        <item>@string/clipboard_expiry_5min</item>
        <item>@string/clipboard_expiry_30min</item>
        <item>@string/clipboard_expiry_1hour</item>
        <item>@string/clipboard_expiry_1day</item>
        <item>@string/clipboard_expiry_never</item>
    </string-array>
    <string-array name="clipboard_expiry_values" translatable="false">
        <item>300</item>
        <item>1800</item>
        <item>3600</item>
        <item>86400</item>
        <item>0</item>
    </string-array>
    <string name="clipboard_clear_history">Clear clipboard history</string>
    <string name="clipboard_clear_history_confirm">Delete all items from the clipboard history?</string>
    <string name="clipboard_clear_all">Clear all</string>
    <string name="clipboard_history_empty">Nothing here yet. Copied text and images will show up here.</string>
    <string name="clipboard_turned_off">Clipboard history is turned off</string>
    <string name="clipboard_turn_on">Turn on</string>
    <string name="physical_keyboard">Physical keyboard</string>
    <string name="physical_keyboard_summary">Type through Indic Keyboard\'s engines and suggestions on an external keyboard</string>
    <string name="settings_screen_privacy">Privacy</string>
    <string name="privacy_statement">Indic Keyboard is free and open source - no ads, no analytics, no tracking; nothing you type ever leaves your device.</string>
    <string name="privacy_section_learned">Learned words</string>
    <string name="privacy_section_history">History</string>
    <string name="privacy_learned_typing">Words learned from your typing</string>
    <string name="privacy_learned_typing_summary">Picked up as you type and select suggestions</string>
    <string name="privacy_learned_typing_confirm">Words the keyboard learned from your typing will be deleted from this device. Dictionaries from language packs are not affected.</string>
    <string name="privacy_learned_varnam">Words learned by Varnam</string>
    <string name="privacy_learned_varnam_summary">Learned by the transliteration engine as you type</string>
    <string name="privacy_learned_varnam_confirm">Words Varnam learned from your typing will be deleted. Word packs downloaded with the language pack are kept.</string>
    <string name="privacy_clear_emojis">Clear recent emojis</string>
    <string name="privacy_clear_emojis_summary">Empties the recents row in the emoji palette</string>
    <string name="privacy_clear_emojis_confirm">Clear the recently used emojis?</string>
    <string name="privacy_clear_clipboard_summary">Deletes entire clipboard contents</string>
    <string name="privacy_delete">Delete</string>
    <string name="privacy_deleted">Deleted</string>
    <string name="learned_words_delete_all">Delete all</string>
    <string name="learned_words_search_hint">Search words</string>
    <string name="learned_words_empty">No learned words yet</string>
    <string name="language_section_numbers">Numbers</string>
    <string name="language_section_preferences">Preferences</string>
    <string name="native_numerals">Use local numerals</string>
    <string name="native_numerals_summary">%1$s on the number row, not 1 2 3</string>
    <string name="clipboard_turn_off">Turn off</string>
    <string name="clipboard_chip_description">Paste from clipboard</string>
    <string name="clipboard_image_description">Copied image</string>
    <string name="clipboard_image_label">Image</string>
    <string name="clipboard_delete_item">Delete item</string>
    <string name="clipboard_back_to_keyboard">Back to keyboard</string>
    <string name="clipboard_open_history">Open clipboard history</string>
    <string name="language_section_companion">Companion language</string>
    <string name="companion_language_suggestions">Use as companion language</string>
    <string name="companion_language_suggestions_summary">Suggest %1$s words while typing in English</string>
    <string name="companion_toggle_description">Companion suggestions</string>
    <string name="hw_toggle_description">Show or hide keyboard</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="cloud_sync_title">Google Keyboard Sync</string>
    <string name="cloud_sync_summary">Sync is turned on</string>
    <string name="cloud_sync_summary_disabled">Sync your personal dictionary across devices</string>
    <string name="sync_now_title">Sync now</string>
    <string name="clear_sync_data_title">Delete cloud data</string>
    <string name="clear_sync_data_summary">Deletes your synced data from Google</string>
    <string name="clear_sync_data_confirmation">Your synced data will be deleted from the cloud. Are you sure?</string>
    <string name="clear_sync_data_ok">Delete</string>
    <string name="cloud_sync_cancel">Cancel</string>
    <string name="cloud_sync_opt_in_text">Your personal dictionary will be synced and backed up to
        Google servers. The statistical information of word frequency may be collected to help
        improve our products. The collection and usage of all the information will be compliant with
        <a href="https://www.google.com/policies/privacy">Google\'s Privacy Policy</a>.
    </string>
    <string name="add_account_to_enable_sync">
        Please add a Google account to this device to enable this feature
    </string>
    <string name="cloud_sync_summary_disabled_work_profile">
        Sync is not available for devices with Google Apps for Business accounts
    </string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="show_emoji_key">Emoji key</string>
    <string name="show_emoji_key_summary">Show a permanent emoji key on the keyboard. When off, long-press the ?123 key for emoji</string>
    <string name="emoji_skin_tone">Default skin tone</string>
    <string-array name="emoji_skin_tone_entries">
        <item>👋 Default</item>
        <item>👋🏻 Light</item>
        <item>👋🏼 Medium-light</item>
        <item>👋🏽 Medium</item>
        <item>👋🏾 Medium-dark</item>
        <item>👋🏿 Dark</item>
    </string-array>
    <string-array name="emoji_skin_tone_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from contacts for word suggestions</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="number_row">Number row</string>
    <string name="number_row_summary">Always show number row</string>
    <string name="show_hints">Show key hints</string>
    <string name="show_hints_summary">Show long-press hints</string>
    <string name="emoji_switch_key">Emoji switch key</string>
    <string name="emoji_switch_key_summary">Always show emoji key beside spacebar.</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_enable_emoji_alt_physical_key">Emoji for physical keyboard</string>
    <string name="prefs_enable_emoji_alt_physical_key_summary">Physical Alt key shows the emoji palette</string>
</resources>