<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2026, Jishnu Mohan <jishnu7@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_emoji">
    <CheckBoxPreference
        android:key="pref_show_emoji_switch_key"
        android:title="@string/show_emoji_key"
        android:summary="@string/show_emoji_key_summary"
        android:defaultValue="false"
        android:persistent="true" />
    <ListPreference
        android:key="pref_emoji_skin_tone"
        android:title="@string/emoji_skin_tone"
        android:entries="@array/emoji_skin_tone_entries"
        android:entryValues="@array/emoji_skin_tone_values"
        android:defaultValue="0"
        android:summary="%s"
        android:persistent="true" />
    <CheckBoxPreference
        android:key="pref_enable_emoji_alt_physical_key"
        android:title="@string/prefs_enable_emoji_alt_physical_key"
        android:summary="@string/prefs_enable_emoji_alt_physical_key_summary"
        android:defaultValue="true"
        android:persistent="true" />
</PreferenceScreen>
